--- a/src/app/add-form/add-form.component.html
+++ b/src/app/add-form/add-form.component.html
@@ -2,8 +2,8 @@
 <div class="d-fle">
     <div class="c">        
         <h4 class="list-group-header">CONTACTS</h4>
-        <ul style="text-decoration: none" *ngFor="let contact of contacts,let i=index" 
-        class="list-group border" (click)="select(i)">
+        <ul *ngFor="let contact of contacts,let i=index" 
+        class="list-group border pointer" (click)="select(i)">
             <li class='list-group-items'>{{contact.name}}</li>
             <li class="list-group-items">{{contact.phno}}</li>
             <li class="list-group-items">{{contact.email}}</li>  
@@ -11,44 +11,46 @@
     </div>  
 
     <div class="p-3 container shadow m-5">
-        <form class="w-100" (ngSubmit)="onFormSubmit(form)" #form="ngForm">
-            <div class="m-1">
-                <label for="Name" class="form-label">Name<span class="text-danger">*</span></label>
+        <form (ngSubmit)="onFormSubmit(form)" #form="ngForm">
+            <div class="margin">
+            <div class="">
+                <label for="Name" class="form-label bold">Name<span class="text-danger">*</span></label>
                 <input type="text" class="form-control" name="userName" #username="ngModel" (keyup)="onKey($event)" ngModel required minlength="6">
                 <p class="alert alert-danger m-1" id="username" *ngIf="(username.touched && !(username.valid))">
                 Username is required</p>
             </div>
             <div class="m-1">
-                <label for="Email" class="form-label">Email <span class="text-danger">*</span></label>
+                <label for="Email" class="form-label bold">Email <span class="text-danger">*</span></label>
                 <input class="form-control" id="Email" type="email" name="Email" ngModel required email #Email="ngModel">
-                <div class="alert alert-danger m-1" id="username" *ngIf="(Email.touched && !(Email.valid))">
+                <div class="alert alert-danger m-1" id="username" *ngIf="(Email.touched) && !(Email.valid)">
                     Email is required
                 </div>
             </div>
             <div class="row mt-1 mb-1">
                 <div class="col-6">
-                    <label for="phn" class="form-label">Mobile <span class="text-danger">*</span></label>
+                    <label for="phn" class="form-label bold ">Mobile <span class="text-danger">*</span></label>
                     <input class="form-control" type="tel" name="mobile" ngModel required #mobile="ngModel">
-                    <div class="alert alert-danger" *ngIf="(mobile.touched && !(mobile.valid))">
+                    <div class="alert alert-danger m-1" *ngIf="(mobile.touched && !(mobile.valid))">
                         Please enter your Mobile Number
                     </div>
                 </div>
                 <div class="col-6">
-                    <label for="landline" class="form-label">Landline</label>
+                    <label for="landline" class="form-label bold">Landline</label>
                     <input class="form-control" type="tel" id="landline">
                 </div>
             </div>
             <div class="mt-1 mb-1">
-                <label for="wb">Website</label>
+                <label for="wb" class="form-label bold">Website</label>
                 <input class="form-control" type="url" id="wb">
             </div>
             <div class="mt-1 mb-1">
-                <label for="address" class="mb-1">Address</label>
+                <label for="address" class="mb-1 bold ">Address</label>
                 <br>
-                <textarea name="" id="address" cols="100" rows="5" class=""></textarea>
+                <textarea name="" id="address" cols="100" rows="5" class="form-control"></textarea>
             </div>
-            <div class="container text-center">
-                <button class="btn btn-primary" [disabled]="!form.valid">Add</button>
+            </div>
+            <div class="container text-end float-end">
+                <button class="btn btn-success ps-5 pe-5" [disabled]="!form.valid">Add</button>
             </div>
         </form>
     </div>
