--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,7 +45,7 @@ body{
     margin: 0px;
     display: flex;
     background-color:#333333;
-    //border:2px solid red;
+    margin-left:11px;
 }
 a{
     color: white;
