--- a/src/app/add-form/add-form.component.html
+++ b/src/app/add-form/add-form.component.html
@@ -15,7 +15,7 @@
             <div class="margin">
             <div class="">
                 <label for="Name" class="form-label bold">Name<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" name="userName" #username="ngModel" (keyup)="onKey($event)" ngModel required minlength="6">
+                <input type="text" class="form-control" name="userName" #username="ngModel" (keyup)="onKey($event)" ngModel required>
                 <p class="alert alert-danger m-1" id="username" *ngIf="(username.touched && !(username.valid))">
                 Username is required</p>
             </div>
