--- a/src/app/add-form/add-form.component.html
+++ b/src/app/add-form/add-form.component.html
@@ -1,15 +1,15 @@
 
 <div class="d-fle">
-    <div class="c">        
+    <div class="c" *ngIf="fetch.showcontact">        
         <h4 class="list-group-header">CONTACTS</h4>
         <ul *ngFor="let contact of contacts,let i=index" 
-        class="list-group border pointer" (click)="select(i)">
+        class="list-group border pointer"  (click)="select(i)">
             <li class='list-group-items'>{{contact.name}}</li>
             <li class="list-group-items">{{contact.phno}}</li>
             <li class="list-group-items">{{contact.email}}</li>  
         </ul>
     </div>  
-
+    <div [ngClass]="{'ml' : fetch.showcontact===false}"></div>
     <div class="p-3 container shadow m-5">
         <form (ngSubmit)="onFormSubmit(form)" #form="ngForm">
             <div class="margin">
