--- a/src/app/add-form/add-form.component.scss
+++ b/src/app/add-form/add-form.component.scss
@@ -3,6 +3,10 @@ body{
     margin: 0px;
 }
 
+.ml{
+    margin-left: 200px;
+}
+
 .header{
     color: white;   
     background-color: #3399CC;
@@ -59,7 +63,7 @@ a{
     padding: 12px 0px 9px 14px;
     margin-top:0px;
     line-height: 1.5em;
-    width: 279px;
+    width: 310px;
     display: block;
     margin-bottom: 0px;
     margin-left: 20px;
