--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,6 +1,6 @@
 <div class="d-fle">
     <div class="c">        
-        <h4 class="list-group-header">CONTACTS</h4>
+        <p class="list-group-header">CONTACTS</p>
         <ul *ngFor="let contact of contacts,let i=index" 
         class="list-group border pointer" (click)="selec(i)" [ngClass]="{'s':fetch.selectedIndex===i}" >
             <li class='list-group-items'>{{contact.name}}</li>
@@ -36,17 +36,17 @@
                 </div>
                 <div class="col-6">
                     <label for="landline" class=" bold form-label">Landline</label>
-                    <input class="form-control" type="tel" id="landline">
+                    <input class="form-control" type="tel" id="landline" ngModel name="Landline" #Landline="ngModel" [(ngModel)]="landline">
                 </div>
             </div>
             <div class="mt-1 mb-1">
                 <label for="wb" class="bold form-label">Website</label>
-                <input class="form-control" type="url" id="wb">
+                <input class="form-control" type="url" id="wb" ngModel name="Website" #Website="ngModel" [(ngModel)]="website">
             </div>
             <div class="mt-1 mb-1">
                 <label for="address" class=" bold mb-1">Address</label>
                 <br>
-                <textarea name="" id="address" cols="100" rows="5" class="form-control"></textarea>
+                <textarea name="" id="address" cols="100" rows="5" class="form-control" ngModel name="Address" #Address="ngModel" [(ngModel)]="address"></textarea>
             </div>
             </div>
             <div class="container text-end float-end">
