--- a/src/app/edit/edit.component.scss
+++ b/src/app/edit/edit.component.scss
@@ -62,7 +62,8 @@ a{
     font-weight: bolder;
     padding-top: 14px;
     padding-bottom: 12px;
-    margin:0px 0px 0px 20px;
+    font-size: 20px;
+    margin:0px 0px 5px 20px;
 }
 
 .list-group{
