--- a/src/app/add-form/add-form.component.scss
+++ b/src/app/add-form/add-form.component.scss
@@ -56,7 +56,8 @@ a{
     font-weight: bolder;
     padding-top: 14px;
     padding-bottom: 12px;
-    margin:0px 0px 0px 20px;
+    font-size: 20px;
+    margin:0px 0px 5px 20px;
 }
 
 .list-group{
@@ -66,12 +67,14 @@ a{
     width: 310px;
     display: block;
     margin-bottom: 0px;
-    margin-left: 20px;
+    margin-left: 30px;
     color: rgb(75, 74, 74);
     font-size:18px;
     border-radius:0 !important
 }
-
+.pointer{
+    cursor: pointer;
+}
 
 .border{
     border: 1px solid #CCCCCC;
