--- a/src/app/contactslist/contactslist.component.html
+++ b/src/app/contactslist/contactslist.component.html
@@ -44,9 +44,9 @@
     </div>
     
     <div class="d-flex right" *ngIf="fetch.showcontact">
-        <img class="icon mr-2" src="../assets/images/Edit-icon.png" width="16px" (click)="clickEdit()" height="18px" alt="" style="cursor: pointer;">
+        <img class="icon mt-2" src="../assets/images/Edit-icon.png" width="16px" (click)="clickEdit()" height="18px" alt="" style="cursor: pointer;">
         <div class="icon-text mr-1" (click)="clickEdit()" style="cursor: pointer;">EDIT</div>
-        <img class="icon" src="../assets/images/delete1.png" width="13px" (click)="clickDelete()" height="23px" alt="" style="cursor: pointer;">
+        <img class="icon mt-1" src="../assets/images/delete1.png" width="13px" (click)="clickDelete()" height="23px" alt="" style="cursor: pointer;">
         <div class="icon-text" (click)="clickDelete()" style="cursor: pointer;">DELETE</div>
     </div>
 </div> 
