--- a/src/app/edit/edit.component.scss
+++ b/src/app/edit/edit.component.scss
@@ -1,170 +1,1 @@
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-    margin: 0px;
-}
-
-.header{
-    color: white;   
-    background-color: #3399CC;
-    margin: 0px;
-    font-weight: lighter;
-    font-size: 58px;
-    padding: 18px 0px 28px 23px; 
-}
-
-.nav-bar{
-    display: flex;
-    background-color:#333333;
-    height: 40px; 
-    justify-content: space-between;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.nav-tabs{
-    display: flex;
-}
-
-.bold{
-    font-weight: bold;
-}
-
-a{
-    color: white;
-}
-
-.nav-item{
-    color: white; 
-    margin-left:10px;
-    padding: 9px 16px 12px;
-    font-weight: bolder;
-}
-
-.active{
-    background-color:orange;
-    border-left: 3px solid white;
-    color: black; 
-}
-
-.nav-icon{
-    margin-right: 11px;
-    padding: 7px;
-}
-
-.body{
-    display: flex; 
-    padding-top: 4px; 
-    margin-top: 3px; 
-    margin-left: 6px;
-}
-
-.list-group-header{
-    color: black; 
-    font-weight: bolder;
-    padding-top: 14px;
-    padding-bottom: 12px;
-    font-size: 20px;
-    margin:0px 0px 5px 20px;
-}
-
-.list-group{
-    padding: 12px 0px 9px 14px;
-    margin-top:0px;
-    line-height: 1.5em;
-    width: 310px;
-    display: block;
-    margin-bottom: 0px;
-    margin-left: 20px;
-    color: rgb(75, 74, 74);
-    font-size:18px;
-    border-radius:0 !important
-}
-
-.border{
-    border: 1px solid #CCCCCC;
-}
-
-.border-start{
-    border-left: 1px solid #CCCCCC;
-}
-
-.border-end{
-    border-right:1px solid #CCCCCC;
-}
-
-.list-group-items{
-    padding: 0.5px;
-    margin-left: 6px;
-    list-style: none;
-    color: black;
-}
-
-.margin{
-    margin-right: 145px;
-}
-
-
-.c{
-    margin-top:1px;
-}
-.container{
-    padding-top: 2px;
-    margin: 5px 0px 0px 74px;
-    width:50%;
-}
-
-.div-title{
-    margin-bottom: 10px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.div-sub-title{
-    display: flex;
-    margin-top: 5px;
-    margin-bottom: 11px;
-}
-
-.div-text{
-    margin-bottom: 2px;
-    margin-left: 5px;
-}
-
-.ms-3{
-    margin-left: 5px;
-}
-
-.d-flex{
-    display: flex;
-    margin-top: 45px;
-}
-
-.d-fle{
-    display: flex;
-    gap: 30px;
-    position: absolute;
-    left: 0px;
-    right: 0px;    
-}
-
-.icon{
-    padding-top: 3px;
-    margin-right: 3px;
-    
-}
-
-.icon-text{
-    margin-left: 6px;
-    margin-top: 2px;
-    margin-right: 3px;
-}
-
-.right{
-    margin-left:auto;
-    margin-right:80px;
-}
-
-.s{
-    background-color: #cfe7f3;
-}
-.pointer{
-    cursor: pointer;
-}
+@use '../formsformat.scss';
